<resources>
    <string name="app_name">Matcha-Coders</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About Developers</string>
    <string name="register">Register</string>
    <string name="archive">Archive</string>
    <string name="program_name_str">Program</string>
    <string name="program_str">Enter Program Of Study...</string>
    <string name="courses_str">Enter Courses...</string>
    <string name="Done">Done</string>
    <string name="add_courses">Add Course</string>

</resources>
