<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="my.benjamin.com.nar_drawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_contac"
        android:name="my.benjamin.com.nar_drawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_help"
        android:name="my.benjamin.com.nar_drawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_about"
        android:name="my.benjamin.com.nar_drawer.ui.tools.ToolsFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_tools" />


</navigation>