<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterCourse">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="600dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:id="@+id/layout_1"
                android:orientation="vertical"
                android:background="@color/white">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_course"
                    android:layout_height="120dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/light_green"
                    android:id="@+id/id_tv_program_name"
                    android:textSize="25sp"
                    android:text="@string/program_name_str"
                    android:textColor="@color/white"
                    android:gravity="center"/>
            </LinearLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_below="@id/layout_1"
                android:layout_marginTop="100dp">


                <EditText
                    android:id="@+id/id_et_program_entry"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="30dp"
                    android:layout_marginTop="50dp"
                    android:hint="@string/program_str"
                    android:inputType="text"
                    android:textSize="20sp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@id/id_et_program_entry"
                android:orientation="horizontal"
                android:layout_height="75dp">

            <EditText
                android:layout_marginTop="50dp"
                android:id="@+id/id_et_courses_entry"
                android:hint="@string/courses_str"
                android:layout_margin="30dp"
                android:backgroundTint="@color/light_green"
                android:layout_marginBottom="10dp"
                android:textCursorDrawable="@drawable/cursor"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                tools:ignore="Auto-fill" />
            </LinearLayout>

            <Button
                android:id="@+id/id_btn_add_courses"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/id_et_program_entry"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button"
                android:text="@string/add_courses"
                android:textColor="@color/white"
                android:textSize="25sp" />



            <Button
                android:id="@+id/id_btn_done"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/id_btn_add_courses"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button"
                android:text="@string/Done"
                android:textColor="@color/white"
                android:textSize="25sp" />







            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>